--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=/home/sami/.netbeans/8.0beta/config/GlassFishEE6/Properties/gfv3-1649579641.properties
+deploy.ant.properties.file=/home/sami/.netbeans/8.0/config/GlassFishEE6/Properties/gfv3-1649579641.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=/home/sami/Applications/glassfish-4.0/glassfish/domains/domain1
 j2ee.server.home=/home/sami/Applications/glassfish-4.0/glassfish
@@ -7,4 +7,4 @@ j2ee.server.middleware=/home/sami/Applications/glassfish-4.0
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=/home/sami/.netbeans/8.0beta/build.properties
+user.properties.file=/home/sami/.netbeans/8.0/build.properties
