--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,7 +47,7 @@ j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:$
 j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.primefaces-5.0.RC2.jar}:\
     ${file.reference.bootstrap-1.0.10.jar}:\
@@ -96,6 +96,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=Project.war
+war.name=studyscheduler.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
