trying to fix datatable selection

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,10 +49,10 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=true
 javac.classpath=\
-    ${file.reference.primefaces-5.0.RC2.jar}:\
     ${file.reference.bootstrap-1.0.10.jar}:\
     ${file.reference.commons-lang3-3.3.2.jar}:\
-    ${file.reference.primefaces-extensions-2.0.0.RC.jar}
+    ${file.reference.primefaces-extensions-2.0.0.RC.jar}:\
+    ${file.reference.primefaces-5.0.RC2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
