Added Exam Entity Primary Key

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=/home/sami/.netbeans/8.0/config/GlassFishEE6/Properties/gfv3-1649579641.properties
+deploy.ant.properties.file=C:\\Users\\UK\\AppData\\Roaming\\NetBeans\\8.0beta\\config\\GlassFishEE6\\Properties\\gfv3-727084802.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/sami/Applications/glassfish-4.0/glassfish/domains/domain1
-j2ee.server.home=/home/sami/Applications/glassfish-4.0/glassfish
-j2ee.server.instance=[/home/sami/Applications/glassfish-4.0/glassfish:/home/sami/Applications/glassfish-4.0/glassfish/domains/domain1]deployer:gfv3ee6:localhost:4848
-j2ee.server.middleware=/home/sami/Applications/glassfish-4.0
+j2ee.server.domain=G:/Programs/glassfish-4.0/glassfish/domains/domain1
+j2ee.server.home=G:/Programs/glassfish-4.0/glassfish
+j2ee.server.instance=[G:\\Programs\\glassfish-4.0\\glassfish;G:\\Programs\\glassfish-4.0\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
+j2ee.server.middleware=G:/Programs/glassfish-4.0
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=/home/sami/.netbeans/8.0/build.properties
+user.properties.file=C:\\Users\\UK\\AppData\\Roaming\\NetBeans\\8.0beta\\build.properties
