--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,17 +8,18 @@
         <param-name>primefaces.THEME</param-name>
         <param-value>bootstrap</param-value>
     </context-param>
-    <!--
+
     <filter>
         <filter-name>LoginFilter</filter-name>
-        <filter-class>studyscheduler.filter.LoginFilter</filter-class>
+        <filter-class>studyscheduler.bean.LoginFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>LoginFilter</filter-name>
-        <url-pattern>/user/*</url-pattern>
+        <url-pattern>/faces/user/*</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
         <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
-    -->
+    
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
